--- a/partials/auth.html
+++ b/partials/auth.html
@@ -1,11 +1,17 @@
-<form class="form-signin" role="form">
-	<h2 class="form-signin-heading">Please sign in</h2>
-    <input class="form-control" placeholder="Email address" required="" autofocus="" type="email">
-    <input class="form-control" placeholder="Password" required="" type="password">
-	<!--<div class="checkbox">
-		<label>
-			<input value="remember-me" type="checkbox"> Remember me
-		</label>
-	</div>-->
-	<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-</form>
+<div ng-header></div>
+
+<div class="container-fluid">
+  <form class="form-signin" role="form">
+  	<h2 class="form-signin-heading">Please sign in</h2>
+      <input class="form-control" placeholder="Email address" required="" autofocus="" type="email">
+      <input class="form-control" placeholder="Password" required="" type="password">
+  	<!--<div class="checkbox">
+  		<label>
+  			<input value="remember-me" type="checkbox"> Remember me
+  		</label>
+  	</div>-->
+  	<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  </form>
+</div>
+
+<div ng-footer></div>
