--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container-fluid">
     <div class="row">
-        <div id="copyright" class="col-md-12">
+        <div id="copyright" class="col-md-12 text-center">
           &copy; 2014 ImpossiBrew
         </div>
     </div>
