--- a/partials/header.html
+++ b/partials/header.html
@@ -1,12 +1,13 @@
 <header>
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#/home">ImpossiBrew</a>
       </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#/auth"><i class="fa fa-shield"></i> Log In</a></li>
+        <li><a href="#/login"><i class="fa fa-shield"></i> Login</a></li>
+        <li><a href="#/login"><i class="fa fa-user"></i> Register</a></li>
         <li><a href="#/profile">Profile</a></li>
         <li><input type="text" placeholder="Search" /><a href="#/search">search</a></li>
       </ul>
