--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,9 +1,13 @@
-<div ng-header></div>
+<!-- Setting up main container -->
+<div class="middle">
+  <div class="container">
 
-<p>This is the partial for the profile page.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {[{ 'Current version is v%VERSION%.' | interpolate }]}
-</p>
+  <p>This is the partial for the profile page.</p>
+  <p>
+    Showing of 'interpolate' filter:
+    {[{ 'Current version is v%VERSION%.' | interpolate }]}
+  </p>
 
-<div ng-footer></div>
+<!-- Closing main container -->
+  </div><!-- /.container -->
+</div><!-- /.middle -->
