--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,9 +1,11 @@
 <footer>
-  <div class="container-fluid">
-    <div class="row">
-        <div id="copyright" class="col-md-12 text-center">
-          &copy; 2014 ImpossiBrew
-        </div>
+  <div class="container-fluid main-footer">
+    <div class="container">
+      <div class="row">
+          <div id="copyright" class="col-md-12 text-center">
+            &copy; 2014 ImpossiBrew
+          </div>
+      </div>
     </div>
   </div>
 </footer>
