Update link for User Registration.

--- a/partials/header.html
+++ b/partials/header.html
@@ -7,7 +7,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#/login"><i class="fa fa-shield"></i> Login</a></li>
-        <li><a href="#/login"><i class="fa fa-user"></i> Register</a></li>
+        <li><a href="#/register"><i class="fa fa-user"></i> Register</a></li>
         <li><a href="#/profile">Profile</a></li>
         <li><input type="text" placeholder="Search" /><a href="#/search">search</a></li>
       </ul>
