--- a/partials/register.html
+++ b/partials/register.html
@@ -20,7 +20,7 @@
                   </label>
                 </div> -->
 
-              	<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+              	<button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="userRegister()">Register</button>
                 <br>
                 <p class="text-center"><a href="/#/login">Already have an account?</a></p>
               </fieldset>
