--- a/partials/login.html
+++ b/partials/login.html
@@ -19,7 +19,7 @@
                   </label>
                 </div>
 
-              	<button class="btn btn-lg btn-success btn-block" type="submit">Sign in</button>
+              	<button class="btn btn-lg btn-success btn-block" type="submit" ng-click="userLogin()">Sign in</button>
                 <br>
                 <p class="text-center"><a href="/#/register">Register for an account?</a></p>
               </fieldset>
