--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container-fluid main-footer">
+  <div class="container main-footer">
     <div class="container">
       <div class="row">
           <div id="copyright" class="col-md-12 text-center">
