--- a/partials/register.html
+++ b/partials/register.html
@@ -6,22 +6,13 @@
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
         	<h3 class="text-center login-title">Register and start brewing!</h3>
-
-          <div class="message-pane message-pane-error alert-dismissable" ng-show="formErrors">
-            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <h5>There were errors during registration:</h5>
-            <ul>
-              <li ng-repeat="error in formErrors">{[{ error }]}</li>
-            </ul>
-          </div>
-
           <div class="account-wall">
             <form class="form-signin" role="form">
               <fieldset>
-                <input class="form-control form-top" placeholder="Username" required="" autofocus="" type="text" ng-model="formData.username">
-                <input class="form-control form-middle" placeholder="Email address" required="" type="email" ng-model="formData.email">
-                <input class="form-control form-middle" placeholder="Password" required="" type="password" ng-model="formData.password">
-                <input class="form-control form-bottom" placeholder="Confirm Password" name="confirmPassword" required="" type="password"  ng-model="formData.confirmPassword">
+                <input class="form-control form-top" placeholder="Username" required="" autofocus="" type="text">
+                <input class="form-control form-middle" placeholder="Email address" required="" type="email">
+                <input class="form-control form-middle" placeholder="Password" required="" type="password">
+                <input class="form-control form-bottom" placeholder="Confirm Password" name="confirmPassword" required="" type="password">
 <!--                 <a class="pull-right" href=".">Forgot password?</a>
                 <div class="checkbox">
                   <label><input type="checkbox" value="remember-me">
