--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,12 @@
 /* app css stylesheet */
+html {
+  position: relative;
+  min-height: 100%;
+}
 
 body {
   /*font-size: 16px;*/
+  margin-bottom: 60px;
 }
 
 body > .container {
@@ -20,6 +25,7 @@ h5 {
 footer {
   position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 60px;
   border-top: 1px solid #E7E7E7;
