--- a/partials/home.html
+++ b/partials/home.html
@@ -18,7 +18,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="action in apicalls.actions | orderBy: 'name'">
+      <tr ng-repeat="action in arrApiResponses | orderBy: 'name'">
         <td>{[{action.name}]}</td>
         <td>{[{action.response}]}</td>
       </tr>
