--- a/partials/login.html
+++ b/partials/login.html
@@ -6,11 +6,21 @@
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
         	<h3 class="text-center login-title">Welcome back! Please sign in</h3>
+
+          <div class="message-pane message-pane-error alert-dismissable" ng-show="formErrors">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h5>There were errors during login:</h5>
+            <ul>
+              <li ng-repeat="error in formErrors">{[{ error }]}</li>
+            </ul>
+          </div>
+
           <div class="account-wall">
-            <form class="form-signin" role="form">
+            <form class="form-signin" role="form" ng-submit="userLogin(formData)">
               <fieldset>
-                <input class="form-control form-top" placeholder="Email address" required="" autofocus="" type="email">
-                <input class="form-control form-bottom" placeholder="Password" required="" type="password">
+                <!-- <input class="form-control form-top" placeholder="Email address" required="" autofocus="" type="email" ng-model="formData.email"> -->
+                <input class="form-control form-top" placeholder="Username" required="" autofocus="" type="text" ng-model="formData.username">
+                <input class="form-control form-bottom" placeholder="Password" required="" type="password" ng-model="formData.password">
 
                 <a class="pull-right" href=".">Forgot password?</a>
                 <div class="checkbox">
@@ -19,7 +29,7 @@
                   </label>
                 </div>
 
-              	<button class="btn btn-lg btn-success btn-block" type="submit" ng-click="userLogin()">Sign in</button>
+              	<button class="btn btn-lg btn-success btn-block" type="submit">Sign in</button>
                 <br>
                 <p class="text-center"><a href="/#/register">Register for an account?</a></p>
               </fieldset>
