--- a/partials/register.html
+++ b/partials/register.html
@@ -16,7 +16,7 @@
           </div>
 
           <div class="account-wall">
-            <form class="form-signin" role="form">
+            <form class="form-signin" role="form" ng-submit="userRegister(formData)">
               <fieldset>
                 <input class="form-control form-top" placeholder="Username" required="" autofocus="" type="text" ng-model="formData.username">
                 <input class="form-control form-middle" placeholder="Email address" required="" type="email" ng-model="formData.email">
@@ -29,7 +29,7 @@
                   </label>
                 </div> -->
 
-                <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="userRegister()">Register</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
                 <br>
                 <p class="text-center"><a href="/#/login">Already have an account?</a></p>
               </fieldset>
