--- a/partials/header.html
+++ b/partials/header.html
@@ -9,7 +9,11 @@
         <li><a href="#/login"><i class="fa fa-shield"></i> Login</a></li>
         <li><a href="#/register"><i class="fa fa-user"></i> Register</a></li>
         <li><a href="#/profile">Profile</a></li>
-        <li><input type="text" placeholder="Search" /><a href="#/search">search</a></li>
+        <li>
+          <form class="form-horizontal form-search">
+            <div class="controls form-inline"><input type="text" placeholder="Search" name="search" id="search-top"/><a href="#/search"><span class="glyphicon glyphicon-search"></span></a></div>
+          </form>
+        </li>
       </ul>
     </div>
   </nav>
