Add comments and clean up.

--- a/app/layout/master-template.html
+++ b/app/layout/master-template.html
@@ -7,6 +7,7 @@
         </div>
     </div>
 
+    <!-- Including App-Header directive -->
     <div app-header app-title="vm.appTitle"></div>
 
     <section id="content" class="content">
@@ -24,6 +25,7 @@
 
     </section>
 
+    <!-- Including App-Footer directive -->
     <div app-footer app-title="vm.appTitle"></div>
 
 </div>
